feat: Enhance holiday API with country validation and error handling
- Added UnsupportedCountryException to handle unsupported country codes.
- Integrated CountryValidationService to validate country codes against Nager.Date API.
- Updated NagerDateApiClient to throw UnsupportedCountryException for invalid country codes.
- Enhanced HolidayController with improved API documentation and response handling.
- Removed ErrorResponse class as it was no longer needed.
- Implemented GlobalExceptionHandler to manage UnsupportedCountryException and provide user-friendly error messages.
- Created CountryDto to represent country data fetched from the API.
- Added application properties for development and production environments.
- Improved logging configuration for better debugging and error tracking.
- Added unit tests for CountryValidationService and HolidayService to ensure functionality and error handling.

Co-authored-by: Copilot <copilot@github.com>